<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.review.ReviewFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/car_model_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/car_model_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/car_model_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/location_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/location_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location_loading_text"
            android:padding="8dp"
            android:text="@string/location_loading_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/car_plate_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/car_plate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/car_plate_loading_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/description_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/description_loading_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/garage_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <TextView
            android:id="@+id/garage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/garage_loading_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/selected_services_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selected_services_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/single_item_layout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/selected_products_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selected_products_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/single_item_layout" />

        <Button
            android:id="@+id/send_request_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/send_request_text" />

    </LinearLayout>

</ScrollView>